--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
         <activity
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:name=".NavActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:hardwareAccelerated="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -73,6 +74,7 @@
                     />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
